--- a/main.css
+++ b/main.css
@@ -1,3 +1,30 @@
-title {
-  color: orange;
+h1 {
+ font-family: 'Raleway', Helvetica, Arial, sans-serif;
+ font-size: 50px;
+ line-height: 70px;
+}
+h2 {
+ font-family: 'Raleway', Helvetica, Arial, sans-serif;
+ font-size: 30px;
+ line-height: 50px;
+ border-bottom: 1px solid #bdbdbd;
+}
+p {
+ font-family: 'Crimson Text', Georgia, Times, serif;
+ font-size: 20px;
+ line-height: 25px;
+}
+.first{
+ border-bottom: 3px solid #bdbdbd;
+}
+.menu{
+  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 25px;
+}
+.col-md-11{
+  border-left: 1px solid #bdbdbd;
+}
+.active{
+  border-bottom: 1px solid #bdbdbd;
 }
