--- a/main.css
+++ b/main.css
@@ -30,4 +30,7 @@ p {
 }
 li{
   list-style: circle;
+  font-family: 'Crimson Text', Georgia, Times, serif;
+  font-size: 20px;
+  line-height: 25px;
 }
